Correct shrinking alignments

--- a/styles.css
+++ b/styles.css
@@ -55,12 +55,15 @@ These add the width and the centering of every section */
   display: flex;
   justify-content: space-between;
   align-items: center;
+  min-width: 450px;
 }
 
 .intro-container {
   display: flex;
+  justify-content: space-evenly;
   padding: 90px 0px;
   gap: 30px;
+  min-width: 400px;
 }
 
 .intro-elements {
@@ -72,6 +75,7 @@ These add the width and the centering of every section */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-width: 250px;
 }
 
 .intro-informational div {
@@ -115,7 +119,8 @@ These add the width and the centering of every section */
 .picture-information {
   font-size: 36px;
   font-weight: 800;
-  color: #1F2937
+  color: #1F2937;
+  min-width: 405px;
 }
 
 .picture img {
@@ -140,8 +145,9 @@ These add the width and the centering of every section */
 .quote {
   display: flex;
   flex-direction: column;
-  width: 700px;
+  flex-wrap: wrap;
   padding: 100px 60px 80px 60px; 
+  width: 50%;
 
   font-size: 30px;
   font-style: italic;
@@ -157,6 +163,11 @@ These add the width and the centering of every section */
 }
 
 /* CALL-TO-ACTION SECTION */
+/*.call-to-action {
+  display: flex;
+  justify-content: center;
+}*/
+
 .call-to-action-box {
   margin: 80px 0 80px 0;
   padding: 50px 30px 50px 30px;
@@ -166,6 +177,7 @@ These add the width and the centering of every section */
   justify-content: space-around;
   align-items: center;
   border-radius: 10px; 
+  min-width: 310px;
 }
 
 .call-to-action .urge {
@@ -183,6 +195,7 @@ These add the width and the centering of every section */
   border-radius: 10px;
   width: 120px;
   height: 30px;
+  min-width: 70px;
   
   color: white;
   text-align: center;
@@ -200,6 +213,5 @@ These add the width and the centering of every section */
   display: flex;
   justify-content: center;
   align-items: center;
-  
   color: #c1c4cb;
 }
